--- a/Apple_AI.conf
+++ b/Apple_AI.conf
@@ -4,3 +4,15 @@ DOMAIN-SUFFIX,icloud.com,DIRECT
 DOMAIN-SUFFIX,openai.com,PROXY
 DOMAIN-SUFFIX,chatgpt.com,PROXY
 FINAL,DIRECT
+[Rule]
+DOMAIN-SUFFIX,openai.com,PROXY
+DOMAIN-SUFFIX,chatgpt.com,PROXY
+DOMAIN-SUFFIX,api.openai.com,PROXY
+DOMAIN-SUFFIX,auth0.openai.com,PROXY
+DOMAIN-SUFFIX,oaiusercontent.com,PROXY
+DOMAIN-SUFFIX,ai.com,PROXY
+DOMAIN-SUFFIX,ml.apple.com,PROXY
+DOMAIN-SUFFIX,ai.apple.com,PROXY
+IP-CIDR,104.18.0.0/16,PROXY
+IP-CIDR,172.64.0.0/16,PROXY
+FINAL,DIRECT
